--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 -->
 <body class="impress-not-supported" background="jaya/background.jpg">
     <audio controls autoplay id="player">
-      <source src="jaya/music.mp3" type="audio/mpeg">
+      <source src="jaya/music.mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
 <!--
