--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
 -->
 <body class="impress-not-supported" background="jaya/background.jpg">
-    <audio controls autoplay id="player">
+    <audio loop="loop" autoplay="autoplay">
       <source src="jaya/music.mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
