--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     
 -->
 <body class="impress-not-supported" background="jaya/background.jpg">
-    <audio loop="loop" autoplay="autoplay">
+    <!--<audio loop="loop" autoplay="autoplay">
       <source src="jaya/music.mp3" type="audio/mp3">
       Your browser does not support the audio element.
-    </audio>
-     <iframe src="jaya/music.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe> 
+    </audio>-->
+	<iframe src="jaya/music.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+	</iframe> 
 <!--
     For example this fallback message is only visible when there is `impress-not-supported` class on body.
 -->
